# svg2pptx

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/plan/svg2pptx-fork-roadmap/: 2026-03-24_svg2pptx-fork-12-week-oceanppt-usable-roadmap.md
.agents/plan/svg2pptx-fork-roadmap/issues/: 2026-03-24_02-22-00-svg2pptx-fork-12-week-oceanppt-usable.csv
docs/regression/: baseline_5_manual_score_sheet.csv  feature_support_matrix.md  full_15_workflow.md  manual_score_template.csv  report_template.md  week7_go_no_go_manual_score_2026-03-24.csv  week7_go_no_go_review_2026-03-24.md
examples/: architecture-diagram-light-flat.pptx  architecture-diagram-light-flat_v.pptx  architecture-diagram-light.pptx  output_existing.pptx  output_from_string.pptx  output_heads.pptx  output_params.pptx  output_scaled.pptx  output_simple.pptx  test_convert.py
scripts/: __init__.py  diag_svg2pptx.py  diag_svg_feature_scan.py
src/svg2pptx/: __init__.py  __main__.py  cli.py  config.py  converter.py  result_status.py
src/svg2pptx/geometry/: transforms.py  units.py
src/svg2pptx/parser/: styles.py  svg_parser.py
src/svg2pptx/pptx_writer/: freeform.py  groups.py  shapes.py  text.py
tests/: test_cli.py  test_converter.py  test_diagnostics.py  test_geometry.py  test_parser.py
tests/fixtures/oceanppt/: README.md  manifest.json
